k8s_revised/deamonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonset
  labels:
    app: nginx
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
        - name: nginx
          image: nginx:latest
          ports:
          - containerPort: 80
