k8s_revised/mysqlservice.yml
kind: Service
apiVersion: v1
metadata:
  name:  mysql-service
  namespace: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
