k8s_revised/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: nginx
spec:
  selector:
      app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
